keep the page description small, enlarge it on focus.  also make sure the panel is resized at the same time. r=clarkbw

--- a/data/ui/share/style.css
+++ b/data/ui/share/style.css
@@ -229,10 +229,14 @@ noscript {
 
 #pageInfo .pageDescription {
     width: 100%;
-    height: 68px;
+    height: 32px;
     margin: 0 0 4px 0;
     resize: none;
     text-overflow: ellipsis;
+}
+
+#pageInfo .pageDescription:focus {
+    height: 64px;
 }
 
 #pageInfo .url {
